Prevent textures from clipping out of preview

--- a/src/css/_tabs.scss
+++ b/src/css/_tabs.scss
@@ -28,6 +28,7 @@
 			width: 100%;
 			height: 100%;
 			background-repeat: no-repeat;
+			background-size: contain;
 		}
 	}
 }
